welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: forward reference extends over definition of variable temp
	    	var temp:Int = A;
                               ^max1020:7: error: forward reference extends over definition of variable A
    		var A = B;
                        ^