welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int =  {
	var A:Int = a
	var B:Int = b
	var temp:Int = 0
	if (b > a) {
	    	var temp:Int = A;
    		var A = B;
   		var B = temp
	    
	  }
	  
	  // Knowing a is bigger, just check a first
	  if (A >= 10 && A <= 20) {
	  	return A;
	  }
	  if (B >= 10 && B <= 20) {
	  	return B;
	  }
	  	return 0
}	